# aoc2022

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: day_01.enc.txt  day_02.enc.txt  day_03.enc.txt  day_04.enc.txt  day_05.enc.txt  day_06.enc.txt  day_07.enc.txt  day_08.enc.txt  day_09.enc.txt  day_10.enc.txt  day_11.enc.txt  day_12.enc.txt  day_13.enc.txt  day_14.enc.txt  day_15.enc.txt  day_16.enc.txt  day_17.enc.txt  day_18.enc.txt  day_19.enc.txt  day_20.enc.txt  day_21.enc.txt  day_22.enc.txt  day_23.enc.txt  day_24.enc.txt  day_25.enc.txt
fetch_day/: Cargo.toml
fetch_day/src/: main.rs
fetch_day/templates/rs/: Cargo.stpl.toml
fetch_day/templates/rs/src/: lib.stpl.rs
rs/day_01/: Cargo.toml  README.md
rs/day_01/benches/: bench.rs
rs/day_02/: Cargo.toml  README.md
rs/day_03/: Cargo.toml  README.md
rs/day_04/: Cargo.toml  README.md
rs/day_05/: Cargo.toml  README.md
rs/day_06/: Cargo.toml  README.md
rs/day_07/: README.md
rs/day_08/: README.md
rs/day_09/: README.md
rs/day_10/: README.md
rs/day_11/: Cargo.toml  README.md
rs/day_12/: Cargo.toml  README.md
rs/day_13/: Cargo.toml  README.md
rs/day_14/: Cargo.toml  README.md
rs/day_15/: Cargo.toml  README.md
rs/day_16/: Cargo.toml  README.md
rs/day_17/: Cargo.toml  README.md
rs/day_18/: Cargo.toml  README.md
rs/day_19/: Cargo.toml  README.md
rs/day_20/: Cargo.toml  README.md
rs/day_21/: Cargo.toml  README.md
rs/day_22/: Cargo.toml  README.md
rs/day_23/: Cargo.toml  README.md
rs/day_24/: Cargo.toml  README.md
rs/day_25/: Cargo.toml  README.md
(+39 files in other folders)
