[workspace]

default-members = []
members = [
    "fetch_day",
    "rs/day_01",
    "rs/day_02",
    "rs/day_03",
    "rs/day_04",
    "rs/day_05",
    "rs/day_06",
    "rs/day_07",
    "rs/day_08",
    "rs/day_09",
    "rs/day_10",
    "rs/day_11",
    "rs/day_12",
]

[workspace.dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
